<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        >
        <item
            
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            />

        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_postad"
                android:icon="@drawable/ic_postad"
                android:title="@string/post_ads" />


            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/feedback" />

            <item
                android:id="@+id/nav_rateus"
                android:icon="@drawable/ic_rate"
                android:title="@string/rate_us" />

            <item
                android:id="@+id/nav_aboutus"
                android:icon="@drawable/ic_aboutus"
                android:title="@string/about_us" />

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/share_app" />

    </group>
    </menu>